@@ -536,19 +536,21 @@ undef_symbol.err: undef_symbol_main.o undef_symbol.so gcctestdir/ld
 	fi
 
 
-# Test --compress-debug-sections.  FIXME: check we actually compress.
-check_PROGRAMS += flagstest_compress_debug_sections
-flagstest_compress_debug_sections: flagstest_debug.o gcctestdir/ld
-	$(CXXLINK) -Bgcctestdir/ -o $@ $< -Wl,--compress-debug-sections=zlib
-	test -s $@
-
-
 # Test -o when emitting to a special file (such as something in /dev).
 check_PROGRAMS += flagstest_o_specialfile
 flagstest_o_specialfile: flagstest_debug.o gcctestdir/ld
 	$(CXXLINK) -Bgcctestdir/ -o /dev/stdout $< 2>&1 | cat > $@
 	chmod a+x $@
 	test -s $@
+
+if HAVE_ZLIB
+
+# Test --compress-debug-sections.  FIXME: check we actually compress.
+check_PROGRAMS += flagstest_compress_debug_sections
+flagstest_compress_debug_sections: flagstest_debug.o gcctestdir/ld
+	$(CXXLINK) -Bgcctestdir/ -o $@ $< -Wl,--compress-debug-sections=zlib
+	test -s $@
+
 
 # The specialfile output has a tricky case when we also compress debug
 # sections, because it requires output-file resizing.
@@ -558,6 +560,8 @@ flagstest_o_specialfile_and_compress_debug_sections: flagstest_debug.o \
 	$(CXXLINK) -Bgcctestdir/ -o /dev/stdout $< -Wl,--compress-debug-sections=zlib 2>&1 | cat > $@
 	chmod a+x $@
 	test -s $@
+
+endif HAVE_ZLIB
 
 # Test symbol versioning.
 check_PROGRAMS += ver_test
